--- a/food-website/style/style-responsive.css
+++ b/food-website/style/style-responsive.css
@@ -100,7 +100,7 @@
         z-index: +1;
         visibility: hidden;
         position: fixed;
-        left: 30%;
+        left: 20%;
         top: 20%;
         background: white;
         box-shadow: .2px .2px 22px .2px gray;
@@ -130,6 +130,7 @@
         white-space: nowrap;
     }
     .header-buttons-container {
+        gap: 20px;
         margin-top: 0px;
         justify-content: space-evenly;
         box-shadow: none;
