--- a/food-website/style/style-responsive.css
+++ b/food-website/style/style-responsive.css
@@ -8,9 +8,7 @@
     .img-container,
     .cuisine-container,
     .membership-section,
-    .membership-container,
-    .nav-bar,
-    ul {
+    .membership-container {
         display: flex;
     }
     .nav-bar-icon-div,
@@ -23,15 +21,9 @@
     .membership-section,
     .membership-container,
     .testimonials-section,
-    .testimonials-container,
-    .nav-bar,
-    ul {
-        flex-direction: column;
-    }
-    .membership-section,
-    .membership-container,
     .testimonials-container {
         gap: 20px;
+        flex-direction: column;
     }
     .top-bar-container {
         box-shadow: .2px .2px 12px .2px black;
@@ -51,8 +43,7 @@
         white-space: nowrap;
         font-size: 1rem;
     }
-    .nav-bar-icon-div,
-    .nav-bar {
+    .nav-bar-icon-div {
         justify-content: center;
         align-items: center;
     }
@@ -71,46 +62,7 @@
         color: rgb(255, 81, 0);
     }
     ul {
-        gap: 30px;
         visibility: hidden;
-    }
-    .menu-bar-heading {
-        visibility: visible;
-        color: rgb(230, 86, 19);
-        margin-top: -10px;
-    }
-    .nav-bar a {
-        border-radius: 200px;
-        font-size: .9rem;
-        border: 2px solid rgb(230, 86, 19);
-        color: black;
-        white-space: nowrap;
-        padding: 7px 14px 7px 14px;
-        text-decoration: none;
-    }
-    .nav-bar a:hover {
-        transition: .2s;
-        color: white;
-        background: rgb(230, 86, 19);
-    }
-    .log-in-button {
-        margin-left: -12px;
-    }
-    .nav-bar-container {
-        z-index: +1;
-        visibility: hidden;
-        position: fixed;
-        left: 20%;
-        top: 20%;
-        background: white;
-        box-shadow: .2px .2px 22px .2px gray;
-        border-radius: 8px;
-        width: 60%;
-        height: 24rem;
-    }
-    .nav a {
-        padding: 8px 12px 8px 12px;
-        text-decoration: none;
     }
     header {
         padding-top: 70px;
@@ -130,7 +82,6 @@
         white-space: nowrap;
     }
     .header-buttons-container {
-        gap: 20px;
         margin-top: 0px;
         justify-content: space-evenly;
         box-shadow: none;
@@ -154,7 +105,7 @@
         height: auto;
     }
     .service-section p {
-        font-size: .72rem;
+        font-size: .8rem;
     }
     .cuisine-section p {
         line-height: 24px;
