--- a/food-website/style/style-responsive.css
+++ b/food-website/style/style-responsive.css
@@ -8,9 +8,11 @@
     .img-container,
     .cuisine-container,
     .membership-section,
-    .membership-container {
+    .membership-container,
+    .nav-bar{
         display: flex;
     }
+
     .nav-bar-icon-div,
     .top-bar-container,
     .header-text-div,
@@ -21,9 +23,14 @@
     .membership-section,
     .membership-container,
     .testimonials-section,
+    .testimonials-container,
+    .nav-bar{
+        flex-direction: column;
+    }
+    .membership-section,
+    .membership-container,
     .testimonials-container {
         gap: 20px;
-        flex-direction: column;
     }
     .top-bar-container {
         box-shadow: .2px .2px 12px .2px black;
@@ -43,7 +50,8 @@
         white-space: nowrap;
         font-size: 1rem;
     }
-    .nav-bar-icon-div {
+    .nav-bar-icon-div,
+    .nav-bar {
         justify-content: center;
         align-items: center;
     }
@@ -62,7 +70,36 @@
         color: rgb(255, 81, 0);
     }
     ul {
+        gap: 30px;
         visibility: hidden;
+    }
+    .menu-bar-heading {
+
+        visibility: visible;
+        color: rgb(230, 86, 19);
+        margin-top: -35px;
+    }
+    .nav-bar a {
+        border-radius: 200px;
+        font-size: .9rem;
+        border: 2px solid rgb(230, 86, 19);
+        color: black;
+        white-space: nowrap;
+        padding: 7px 14px 7px 14px;
+        text-decoration: none;
+    }
+
+    .nav-bar a:hover {
+        transition: .2s;
+        color: white;
+        background: rgb(230, 86, 19);
+    }
+    .log-in-button {
+        margin-left: -12px;
+    }
+    .nav a {
+        padding: 8px 12px 8px 12px;
+        text-decoration: none;
     }
     header {
         padding-top: 70px;
@@ -82,6 +119,7 @@
         white-space: nowrap;
     }
     .header-buttons-container {
+        gap: 20px;
         margin-top: 0px;
         justify-content: space-evenly;
         box-shadow: none;
@@ -105,7 +143,7 @@
         height: auto;
     }
     .service-section p {
-        font-size: .8rem;
+        font-size: .72rem;
     }
     .cuisine-section p {
         line-height: 24px;
