--- a/food-website/style/style.css
+++ b/food-website/style/style.css
@@ -19,7 +19,7 @@ ul,
 .membership-container,
 .membership-icons-plan-row,
 .testimonials-container,
-.testimonials-box,.view-feedback-div,
+.testimonials-box,.view-feedback-div,.feedback-box-row,
 .icons-container,
 .testimonial-name-div,
 .line-div,
@@ -46,7 +46,7 @@ ul,
 .membership-icons-plan-row,
 .testimonials-container,
 .icons-container,
-.testimonial-name-div,.view-feedback-div,
+.testimonial-name-div,.view-feedback-div,.feedback-box-row,.feedback-box-column,
 .line-div,
 .contact-us-form-container,
 .contact-us-container,
@@ -60,7 +60,7 @@ ul,
 .cuisine-div,
 .membership-section,
 .membership-cards,
-.testimonials-box,
+.testimonials-box,.feedback-box-column,
 .contact-us-div,
 form,
 footer {
@@ -145,11 +145,11 @@ ul,
     background: orangered;
 }
 
-body::-webkit-scrollbar {
+body::-webkit-scrollbar,.feedback-box-div {
     background: linear-gradient(to left, rgb(184, 31, 11), rgb(220, 28, 3));
 }
 
-body::-webkit-scrollbar-thumb {
+body::-webkit-scrollbar-thumb,.feedback-box-div {
     background: rgb(255, 132, 102);
     border-radius: 2px;
 }
@@ -158,7 +158,7 @@ body::-webkit-scrollbar-button {
     display: hidden;
 }
 
-body {
+body,.feedback-box-div {
     overflow-x: hidden;
 }
 
@@ -472,10 +472,55 @@ svg {
     text-align: end;
 }
 
-.feedback-box{
-    width: 8rem;
-    height: 8rem;
-    background:black;
+.feedback-box-div h2{
+    text-align: center;
+}
+
+.remove-feedback-box-icon{
+    color:red;
+    font-size: 1.5rem;
+}
+
+.feedback-box-div{
+    visibility: hidden;
+    position: fixed;
+    bottom:23%;
+    left: 35%;
+    box-shadow: .2px .2px 12px .2px black;
+    padding:12px 16px 2px 12px;
+    overflow-y: scroll;
+}
+
+.feedback-box-row img{
+    border-radius: 200px;
+    width: 2rem;
+    height: 2rem;
+    margin: 18px 0px 0px 10px;
+}
+
+.feedback-box-column h3,.feedback-box-column p{
+    margin-left: 20px;
+}
+
+.feedback-box-column h3{
+    font-size: 1.1rem;
+}
+
+
+.feedback-box-column p{
+    margin-top: -10px;
+    line-height: 22px;
+    font-size: .9rem;
+}
+
+.feedback-box-icons-row{
+    font-size: .9rem;
+    margin-left: 20px;
+    margin: -3px 0px 0px 20px;
+}
+
+.feedback-box-icons-row ion-icon{
+    color:gold;
 }
 
 .contact-us-section {
