--- a/food-website/style/style-js.css
+++ b/food-website/style/style-js.css
@@ -1,12 +1,21 @@
 .customer-service-box,
 .log-in-box-div,
-.log-in-box-container {
+.log-in-box-container,.view-feedback-div,.feedback-box-row,.add-feedback-box-button-div {
     display: flex;
+}
+
+.customer-service-box,
+.log-in-box-container,.view-feedback-div,.feedback-box-row,.feedback-box-column,.add-feedback-box-button-div {
+    flex-direction:row;
+}
+
+.log-in-box-container,.customer-service-icon,.customer-service-box,.feedback-box-div,.give-feedback-box{
+    position: fixed;
 }
 
 .log-in-box-div,
 .log-in-box-container,
-.customer-service-box {
+.customer-service-box,.feedback-box-column {
     flex-direction: column;
 }
 
@@ -14,8 +23,14 @@
 .create-your-account,
 .log-in-button:hover,
 .customer-service-icon,
-.send-message-button {
+.send-message-button,
+.add-feedback-box-button,.view-feedback-button {
     color: white;
+}
+.log-in-heading,
+.create-account-heading,
+.customer-service-box-text,.feedback-box-div h2,.view-feedback-button {
+    text-align: center;
 }
 
 .log-in-box-div,
@@ -32,6 +47,11 @@
     animation-timing-function: ease;
 }
 
+.log-in-box-container,.view-feedback-div,.add-feedback-box-button-div{
+    justify-content: center;
+    align-content: center;
+}
+
 .log-in-box-div,
 .send-message-button {
     animation-name: fadeIn;
@@ -42,19 +62,20 @@
     color: rgb(255, 58, 40);
 }
 
-.log-in-heading,
-.create-account-heading {
-    text-align: center;
+.customer-service-big-icon,
+.customer-service-box-text {
+    color: rgb(255, 81, 0);
+}
+
+.show-message,.contact-us-error{
+    font-family: 'Roboto' ;
 }
 
 .log-in-box-container {
     z-index: +1;
-    position: fixed;
-    left: 50%;
+    left: 37%;
     right: 50%;
     top: 20%;
-    align-items: center;
-    justify-content: center;
 }
 
 .log-in-box-div {
@@ -132,7 +153,6 @@
 }
 
 .customer-service-icon {
-    position: fixed;
     right: 0;
     right: 20px;
     bottom: 10px;
@@ -149,7 +169,6 @@
     width: 18.5rem;
     height: 33rem;
     box-shadow: .2px .2px 12px .2px gray;
-    position: fixed;
     bottom: 70px;
     right: 0;
     z-index: +1;
@@ -164,7 +183,6 @@
         box-shadow: 2px 2px 62px 2px white;
     }
     100% {
-        display: visible;
         opacity: 1;
     }
 }
@@ -216,26 +234,95 @@
     padding: 8px 6px 4px 10px;
 }
 
-.show-message {
-    font-family: 'Roboto';
-}
-
-.customer-service-big-icon,
-.customer-service-box-text {
-    color: rgb(255, 81, 0);
-}
-
 .customer-service-big-icon {
     margin: 30px 0px 0px 80px;
     font-size: 8rem;
 }
 
-.customer-service-box-text {
-    text-align: center;
-}
-
 .contact-us-error {
     margin-left: -20px;
-    font-family: 'Roboto';
     color: rgb(167, 9, 9);
 }
+
+.remove-feedback-box-icon{
+    color:red;
+    font-size: 1.5rem;
+}
+
+.feedback-box-div{
+    visibility: hidden;
+    bottom:23%;
+    left: 35%;
+    box-shadow: .2px .2px 12px .2px black;
+    padding:12px 16px 2px 12px;
+    overflow-y: scroll;
+}
+
+.feedback-box-row img{
+    border-radius: 200px;
+    width: 2rem;
+    height: 2rem;
+    margin: 18px 0px 0px 10px;
+}
+
+.feedback-box-column h3,.feedback-box-column p{
+    margin-left: 20px;
+}
+
+.feedback-box-column h3{
+    font-size: 1.1rem;
+}
+
+.feedback-box-column p{
+    margin-top: -10px;
+    line-height: 22px;
+    font-size: .9rem;
+}
+
+.feedback-box-icons-row{
+    font-size: .9rem;
+    margin: -3px 0px 0px 20px;
+}
+
+.feedback-box-icons-row ion-icon{
+    color:gold;
+}
+
+.add-feedback-box-button{
+    padding:6px 12px 6px 12px;
+    font-size: .9rem;
+    border-radius: 200px;
+    background: orangered;
+    box-shadow: .2px .2px 6px .2px orangered;
+}
+
+.view-feedback-button{
+    padding:8px 12px 8px 12px;
+    border-radius: 200px;
+    background: orangered;
+}
+
+.give-feedback-box{
+    padding:16px 2px 2px 12px;
+    top:25%;
+    left:34%;
+    width: 30rem;
+    height: 23rem;
+    background: white;
+    box-shadow: .2px .2px 6px .2px gray;
+    animation-name:giveFeedbackBox ;
+    animation-duration: .3s;
+}
+
+@keyframes giveFeedbackBox{
+
+0%{
+  opacity: 0;
+}
+100%{
+
+    opacity: 1;
+}
+
+}
+
