--- a/food-website/style/sign-up-style.css
+++ b/food-website/style/sign-up-style.css
@@ -6,7 +6,7 @@ body {
 
 .container,
 form,
-.left-sidebar {
+.left-sidebar,.button-container {
     display: flex;
 }
 
@@ -19,9 +19,26 @@ form,
 }
 
 form,
-.left-sidebar {
+.left-sidebar,.button-container {
     flex-direction: column;
 }
+body::-webkit-scrollbar,.feedback-box-div {
+    background: linear-gradient(to left, rgb(184, 31, 11), rgb(220, 28, 3));
+}
+
+body::-webkit-scrollbar-thumb,.feedback-box-div {
+    background: rgb(255, 132, 102);
+    border-radius: 2px;
+}
+
+body::-webkit-scrollbar-button {
+    display: hidden;
+}
+
+body,.feedback-box-div {
+    overflow-x: hidden;
+}
+
 
 form {
     gap: 30px;
@@ -52,7 +69,7 @@ h3 {
 }
 
 input {
-    margin-left: 25px;
+    margin-left: 20px;
     font-family: 'Montserrat';
     width: 100%;
     padding: 8px 102px 8px 12px;
@@ -66,21 +83,20 @@ input:focus {
     transition: .3s;
 }
 
-.sign-up-button {
+button {
     margin: 20px 0px 0px 100px;
     color: white;
-    border-radius: 200px;
+    border-radius: 8px;
     border: none;
-    box-shadow: none;
     padding: 8px 22px 8px 22px;
     font-family: 'Montserrat';
     box-shadow: .2px .2px 8px .2px rgb(255, 51, 0);
     background: linear-gradient(to left, rgb(255, 51, 0), rgb(255, 78, 33));
+    outline: none;
 }
 
-.sign-up-button:hover {
+.button-container button:hover{
     background: white;
-    color: rgb(255, 51, 0);
     cursor: pointer;
     box-shadow: .2px .2px 8px .2px lightgray;
     transition: .2s;
@@ -89,4 +105,21 @@ input:focus {
 .icon-images {
     width: 20rem;
     height: auto;
+}
+
+.button-container{
+    margin-left: -70px;
+}
+
+.button-container button:nth-child(1) {
+    box-shadow: .2px .2px 8px .2px rgb(255, 51, 0);
+    background: linear-gradient(to left, rgb(255, 51, 0), rgb(255, 78, 33));
+}
+.button-container button:nth-child(2) {
+    box-shadow: .2px .2px 8px .2px rgb(245, 27, 27);
+    background: linear-gradient(to left, rgb(245, 47, 47), rgb(251, 0, 0));
+}
+.button-container button:nth-child(3) {
+    box-shadow: .2px .2px 8px .2px rgb(11, 124, 194);
+    background: linear-gradient(to left, rgb(1, 138, 223), rgb(0, 95, 179));
 }
