--- a/tech-website/style/variables.scss
+++ b/tech-website/style/variables.scss
@@ -4,6 +4,10 @@ $whiteColor:white;
 $backgroundWhiteColor:white;
 $noBoxShadow:none;
 $noBorder:none;
-$primaryBtn: linear-gradient(to left, #7a08d3, #8110b0);
+$purpleColor: linear-gradient(to left, #7a08d3, #8110b0);
 $transitionButton:.3s;
 $cursorButton:pointer;
+$textAlignCenter:center;
+$serviceSectionHeading:white;
+$justifyContent:center;
+$serviceBoxColor: linear-gradient(to left,#0a002d,#14015d);
