--- a/tech-website/style/variables.scss
+++ b/tech-website/style/variables.scss
@@ -10,4 +10,5 @@ $cursorButton:pointer;
 $textAlignCenter:center;
 $serviceSectionHeading:white;
 $justifyContent:center;
-$serviceBoxColor: linear-gradient(to left,#0a002d,#14015d);
+$serviceBoxColor: linear-gradient(to left, #110148, #270056);
+$blackColor:black;
