adding feedback section

--- a/tech-website/style/accessibility.scss
+++ b/tech-website/style/accessibility.scss
@@ -13,6 +13,7 @@
   .headings-container{
 
     h2{
+      margin-top: 30px;
       color:$blackColor;
     }
   }
@@ -48,7 +49,7 @@ img{
       color:$blackColor;
     }
     ion-icon{
-      font-size: 2rem;
+      font-size: 2.8rem;
     }
   }
 }
